--- a/styles.html
+++ b/styles.html
@@ -491,6 +491,16 @@
     background-color: rgba(255,255,255,0.9);
   }
 
+  /* Repos view */
+  #loading_repos_box{
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: default;
+  }
+  #loading_repos_box paper-spinner{
+    width: 45px;
+    height: 45px;
+  }
+
   /* User view */
 
   #create_repo_dialog{
@@ -563,7 +573,6 @@
   #loading_project_box{
     background-color: rgba(0, 0, 0, 0.1);
     cursor: default;
-    display: none;
   }
   #loading_project_box paper-spinner{
     width: 45px;
